fixed gap between footer and last proj

--- a/public/style.css
+++ b/public/style.css
@@ -502,6 +502,7 @@ a {
   display: flex;
   flex-flow: column;
   gap: 4rem;
+  margin-bottom: 3rem;
 }
 
 .project_item {
